--- a/app/src/main/res/layout/cards_display.xml
+++ b/app/src/main/res/layout/cards_display.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:layout_marginTop="70dp"
+<FrameLayout
+    android:layout_marginTop="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+<RelativeLayout
+    android:layout_marginTop="56dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
@@ -27,3 +39,4 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 </RelativeLayout>
+</FrameLayout>
